model scale and text scale

--- a/MyPortfolio/src/index.css
+++ b/MyPortfolio/src/index.css
@@ -106,3 +106,7 @@ html {
 html {
   scrollbar-color: rgba(0, 0, 0, 0.5) transparent; /* For Firefox */
 }
+
+.resposive-text{
+  font-size: clamp(2em,5vw,10em);
+}
